--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
-    "@angular/cdk": "^18.0.0",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
@@ -19,9 +18,12 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
-    "primeng": "^17.17.0",
+    "@glidejs/glide": "^3.6.1",
+    "animate.css": "^4.1.1",
     "chart.js": "4.4.2",
-    "primeflex": "^3.3.1",
+    "keen-slider": "^6.8.6",
+    "ngx-glide": "^16.0.0",
+    "ngx-owl-carousel-o": "^17.0.0",
     "primeicons": "^7.0.0",
     "quill": "2.0.2",
     "rxjs": "~7.8.0",
