--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,4 @@
 {
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=827846
-  "recommendations": [
-    "angular.ng-template",
-    "leizongmin.node-module-intellisense"
-  ]
+  "recommendations": ["angular.ng-template", "leizongmin.node-module-intellisense", "tm.black"]
 }
