--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "@glidejs/glide": "^3.6.1",
     "animate.css": "^4.1.1",
     "chart.js": "4.4.2",
+    "flowbite": "^2.4.1",
+    "flowbite-angular": "^0.0.2",
     "keen-slider": "^6.8.6",
+    "ngx-cookie-service": "^18.0.0",
     "ngx-glide": "^16.0.0",
     "ngx-owl-carousel-o": "^17.0.0",
     "primeicons": "^7.0.0",
+    "primeng": "^17.17.0",
     "quill": "2.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "vite": "^5.3.1",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -37,15 +42,15 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.11.1",
+    "daisyui": "^4.12.8",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "typescript": "~5.4.2"
   }
 }
